# sphinx-social-cards

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  MANIFEST.in  README.md  README.rst  config.html  cspell.config.yml  directive.html  genindex.html  index.html  noxfile.py  objects.inv  package-lock.json  package.json  py-modindex.html  pyproject.toml  requirements.txt  searchindex.js  setup.py  sitemap.xml
.doctrees/: config.doctree  directive.doctree  environment.pickle  index.doctree
.doctrees/layouts/: background.doctree  icon.doctree  index.doctree  layers.doctree  mask.doctree  typography.doctree
.doctrees/layouts/gradients/: conical.doctree  index.doctree  linear.doctree  presets.doctree  radial.doctree
.doctrees/layouts/shapes/: ellipse.doctree  index.doctree  polygon.doctree  (+1 more)
.doctrees/plugins/: github.doctree  index.doctree  vcs.doctree
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: build.yml  docs.yml  lint.yml  release.yml  test.yml
_modules/: index.html
_modules/sphinx_social_cards/: plugins.html  validators.html
_sources/: config.rst.txt  directive.rst.txt  index.rst.txt
_sources/layouts/: layers.rst.txt  typography.rst.txt
_sources/plugins/: github.rst.txt
_static/: documentation_options.js  sphinx_immaterial_theme.17a772cbc018cb047.min.css  sphinx_immaterial_theme.4309665f686db5c41.min.css  sphinx_immaterial_theme.4d29503e6c69fb33c.min.css  sphinx_immaterial_theme.54c631f60bc6f2db5.min.css  sphinx_immaterial_theme.54edf29961ce02a4c.min.css  sphinx_immaterial_theme.77097494e2ab63a09.min.css  sphinx_immaterial_theme.93e1f52f67d328d3d.min.css  sphinx_immaterial_theme.a502bdbfeaa2af2cb.min.css  sphinx_immaterial_theme.b510360d1549eb328.min.css  sphinx_immaterial_theme.b6b76e63d02feb5bc.min.css  sphinx_immaterial_theme.c9767e311a7fd7257.min.css  sphinx_immaterial_theme.d3123f4a9b8ad07bf.min.css  sphinx_immaterial_theme.e62d5f7aeef674de1.min.css  sphinx_immaterial_theme.ffad850461365bbf3.min.css
docs/: conf.py  config.rst  directive.rst  index.rst
docs/layouts/: typography.rst
docs/plugins/: index.rst  vcs.rst
layouts/: background.html  icon.html  index.html  layers.html  mask.html  typography.html
layouts/gradients/: conical.html  index.html  linear.html  presets.html  radial.html
layouts/shapes/: ellipse.html  index.html  polygon.html  rectangle.html
plugins/: github.html  index.html  vcs.html
src/sphinx_social_cards/: __init__.py  colors.py  fonts.py  generator.py  images.py  metadata.py
tests/: conftest.py  requirements-sphinx4.txt  requirements.txt  test_ext_plugins.py  test_fonts.py  test_generator.py  test_images.py  test_init.py  test_metadata.py  test_validators.py
(+29 files in other folders)
