[build-system]
requires = ["setuptools>=61", "setuptools_scm[toml]>=6.2", "nox"]
build-backend = "setuptools.build_meta"

[project]
name = "sphinx-social-cards"
description = "Generate social media cards for documentation pages with Sphinx"
readme = "README.rst"
keywords = ["sphinx", "social", "cards", "previews"]
license = {text = "MIT"}
dynamic = ["version", "dependencies", "optional-dependencies"]
authors = [
    { name = "Brendan Doherty", email = "2bndy5@gmail.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Framework :: Sphinx :: Extension",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Documentation",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Utilities",
]

[project.urls]
home =  "https://2bndy5.github.io/sphinx-social-cards"
download = "http://github.com/2bndy5/sphinx-social-cards"

[tool.setuptools]
zip-safe = false
include-package-data = true
# packages = [
#     "sphinx_social_cards",
#     "sphinx_social_cards.validators",
#     "sphinx_social_cards.plugins",
#     "sphinx_social_cards.plugins.vcs",
#     "sphinx_social_cards.plugins.vcs.utils",
# ]
# package-dir = {"sphinx_social_cards" = "src/sphinx_social_cards"}
#
# [tool.setuptools.package-data]
# sphinx_social_cards = ["**/layouts/**/*.yml", ".icons/**/*.svg"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["sphinx_social_cards", "sphinx_social_cards.*"]
exclude = ["plugins*", "validators*"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = { vcs = { file = ["requirements-vcs.txt"] }}

[tool.setuptools_scm]
# It would be nice to include the commit hash in the version, but that
# can't be done in a PEP 440-compatible way.
version_scheme= "no-guess-dev"
# Test PyPI does not support local versions.
local_scheme = "no-local-version"
fallback_version = "0.0.0"

[tool.mypy]
show_error_codes = true
show_column_numbers = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]

[tool.coverage.run]
source_pkgs = ["sphinx_social_cards"]
dynamic_context = "test_function"
# These options are useful if combining coverage data from multiple tested envs
parallel = true
relative_files = true
omit = [
    "sphinx_social_cards/.icons/**/*",
]

[tool.coverage.report]
skip_empty = true

[tool.coverage.html]
show_contexts = true
